# initools

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt
examples/: CMakeLists.txt  main.cpp
inc/: INI.hpp
src/: CMakeLists.txt  INI.cpp
tests/: CMakeLists.txt  main.c
